--- a/css/style.css
+++ b/css/style.css
@@ -271,7 +271,8 @@ li a:hover{
     width: 400px;
     height: 170px;
     margin-top: 15px;
-    background-color: rgb(237, 238, 235);
+    background-color:#e2e3de;
+    box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.75);
 }
 .reporte  ul{
     padding: 0;
@@ -297,7 +298,7 @@ label{
 }
 
 .reportexDia{
-    width: 90%;
+    width: 70%;
     height: 30px;
     border: none;
 }
