--- a/css/style.css
+++ b/css/style.css
@@ -304,6 +304,15 @@
     li{
         font-size: 20px;
     }
+
+    .loginp{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        top: 5%;
+    }
     
     form{
         display: flex;
